--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -26,7 +26,7 @@ jobs:
           git tag -a "$version" -m "Release $version"
           git push origin $version
 
-build:
+  build:
     needs: update-version
     runs-on: ${{ matrix.os }}
     strategy:
@@ -64,8 +64,8 @@ build:
       
       - name: Build binary
         run: |
-          ${{ matrix.goos }}=${{ matrix.goos }} ${{ matrix.goarch }}=${{ matrix.goarch }} go build -o release/${{ matrix.file }}${{ matrix.ext }}
-        shell: ${{ matrix.shell }}
+          GOOS=${{ matrix.goos }} GOARCH=${{ matrix.goarch }} go build -o release/${{ matrix.file }}${{ matrix.ext }}
+        shell: bash
 
       - name: Upload artifact
         uses: actions/upload-artifact@v3
@@ -74,9 +74,12 @@ build:
           path: release/*
 
   release:
-    needs: [build]
+    needs: build
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      
       - name: Download Ubuntu artifact
         uses: actions/download-artifact@v3
         with:
@@ -107,4 +110,3 @@ build:
             release/ai-linux
             release/ai-macos
             release/ai-windows.exe
-
